--- a/style/style.css
+++ b/style/style.css
@@ -38,7 +38,7 @@ a {
 
 .navbar {
     font-size: large;
-    background-color: #ffffffbb;
+    background: linear-gradient(#868183,#ffffff00);
     position: fixed;
     width: 90%;
     margin-top: -3%;
@@ -159,8 +159,12 @@ margin-bottom: 5%;
     /* color: black; */
 }
 .all-ft{
-    background-color: #84777790;
+    background-color: #c4c4c4;
     padding-bottom: 1%;
+    background-image: url(/img/footer.png);
+    background-repeat: no-repeat;
+    background-position: left center;
+  
 }
 .main-foot{
     padding: 2% 6% 10% 10%;
@@ -287,6 +291,7 @@ font-weight: 600;
 .contact-form label {
     font-weight: 300;
 }
+
 /* 
 .test{
     display: grid;
