--- a/style/about.css
+++ b/style/about.css
@@ -40,7 +40,8 @@ a {
 } */
 .navbar {
     font-size: large;
-    background-color: #d1bdd1bb;
+    background: linear-gradient(#868183,#ffffff00);
+
     position: fixed;
     width: 90%;
     margin-left: -10%;
@@ -157,6 +158,9 @@ margin-bottom: 5%;
 .all-ft{
     background-color: #84777790;
     padding-bottom: 1%;
+    background-image: url(/img/footer.png);
+    background-repeat: no-repeat;
+    background-position: left center;
 }
 .main-foot{
     padding: 2% 6% 10% 10%;
@@ -220,6 +224,15 @@ footer li{
     border-radius: 9px;
 }
 
+.fr-content{
+    margin: 5% 25%;
+    text-align: center;
+    width: 50%;
+
+}
+.frame{
+    margin-bottom: 8%;
+}
 /* 
 .test{
     display: grid;
