--- a/style/guid.css
+++ b/style/guid.css
@@ -40,11 +40,12 @@ a {
 } */
 .navbar {
     font-size: large;
-    background-color: #d1bdd1bb;
+    background: linear-gradient(#868183,#ffffff00);
     position: fixed;
     width: 90%;
     margin-left: -10%;
     margin-top: -3%;
+    z-index: 99;
 }
 
 .navbar-right {
@@ -150,6 +151,9 @@ margin-bottom: 5%;
 .all-ft{
     background-color: #84777790;
     padding-bottom: 1%;
+    background-image: url(/img/footer.png);
+    background-repeat: no-repeat;
+    background-position: left center;
 }
 .main-foot{
     padding: 2% 6% 10% 10%;
@@ -274,12 +278,94 @@ footer li{
 }
 
 
-/* 
-.test{
-    display: grid;
-    grid-template-columns: 1fr 1fr ;
-    column-gap: 10%;
+.wrapper {
+    padding: 50px 50px;
+    max-width: 1200px;
     text-align: center;
-    font-size: small;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 80px;
+    margin-bottom: 55%;
+}
 
-} */
+
+.parent {
+    width: 45%;
+    margin: 20px;
+    height: 300px;
+    border: 1px solid black;
+    overflow: hidden;
+    position: relative;
+    float: left;
+    display: inline-block;
+  cursor:pointer;
+}
+
+.child {
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+    transition: .5s;
+}
+
+.bg-one {background-image: url(https://media.timeout.com/images/101602611/image.jpg);}
+.bg-two {background-image: url(http://s1.it.atcdn.net/wp-content/uploads/2015/08/2-London.jpg);}
+.bg-three {background-image: url(https://media.timeout.com/images/101484105/image.jpg);}
+.bg-four {background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/0/00/Hollywood_Sign.jpg/1280px-Hollywood_Sign.jpg);}
+.bg-five {background-image: url(http://www.travelandleisure.com/sites/default/files/styles/tnl_redesign_article_landing_page/public/1453920892/DUBAI-554088081-ABOVE0116.jpg?itok=dcoZnCrc);}
+.bg-six {background-image: url(http://blog.whitepages.com/wp-content/uploads/2015/04/san-franc.jpg);}
+
+
+.wrapper h6 {
+    display: none;
+    font-size: 35px;
+    color: #ffffff !important;
+    font-family: sans-serif;
+    text-align: center;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 50px;
+    cursor: pointer;
+  
+}
+
+.parent:hover .child, .parent:focus .child {
+   
+    transform: scale(1.2);
+}
+
+.parent:hover .child:before, .parent:focus .child:before {
+    display: block;
+}
+
+.parent:hover h6, .parent:focus h6 {
+    display: block;
+}
+
+.child:before {
+    content: "";
+    display: none;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(52,73,94,0.75);
+}
+
+
+@media screen and (max-width: 960px) {
+    .parent {width: 100%; margin: 20px 0px}
+    .wrapper {padding: 20px 20px;}
+}
+
+
+
+
+
