--- a/style/guid.css
+++ b/style/guid.css
@@ -149,7 +149,7 @@ margin-bottom: 5%;
     /* color: black; */
 }
 .all-ft{
-    background-color: #84777790;
+    background-color: #c4c4c4;
     padding-bottom: 1%;
     background-image: url(/img/footer.png);
     background-repeat: no-repeat;
